--- a/functions/entityStore.html
+++ b/functions/entityStore.html
@@ -46,7 +46,7 @@
 
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/7d07547/src/entity-store.ts#L303">entity-store.ts:303</a></li></ul></aside></li>
+<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/71a63ed/src/entity-store.ts#L303">entity-store.ts:303</a></li></ul></aside></li>
 <li class="tsd-signature tsd-anchor-link" id="entityStore-1"><span class="tsd-kind-call-signature">entity<wbr/>Store</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">T</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">getID</span>, <span class="tsd-kind-parameter">options</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type ">EntityStore</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">T</span><span class="tsd-signature-symbol">&gt;</span><a href="#entityStore-1" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></li>
 <li class="tsd-description">
 <section class="tsd-panel">
@@ -63,7 +63,7 @@
 <h5><span class="tsd-kind-parameter">options</span>: <span class="tsd-signature-type ">EntityStoreOptions</span></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">EntityStore</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">T</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/7d07547/src/entity-store.ts#L304">entity-store.ts:304</a></li></ul></aside></li>
+<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/71a63ed/src/entity-store.ts#L304">entity-store.ts:304</a></li></ul></aside></li>
 <li class="tsd-signature tsd-anchor-link" id="entityStore-2"><span class="tsd-kind-call-signature">entity<wbr/>Store</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">T</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">getID</span>, <span class="tsd-kind-parameter">initial</span>, <span class="tsd-kind-parameter">options</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type ">EntityStore</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">T</span><span class="tsd-signature-symbol">&gt;</span><a href="#entityStore-2" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></li>
 <li class="tsd-description">
 <section class="tsd-panel">
@@ -82,7 +82,7 @@
 <h5><span class="tsd-kind-parameter">options</span>: <span class="tsd-signature-type ">EntityStoreOptions</span></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">EntityStore</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">T</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/7d07547/src/entity-store.ts#L305">entity-store.ts:305</a></li></ul></aside></li></ul></section></div>
+<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/71a63ed/src/entity-store.ts#L305">entity-store.ts:305</a></li></ul></aside></li></ul></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -101,7 +101,9 @@
 <div class="site-menu">
 <nav class="tsd-navigation"><a href="../modules.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-4"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-namespace)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6"></rect><path d="M9.33 16V7.24H10.77L13.446 14.74C13.43 14.54 13.41 14.296 13.386 14.008C13.37 13.712 13.354 13.404 13.338 13.084C13.33 12.756 13.326 12.448 13.326 12.16V7.24H14.37V16H12.93L10.266 8.5C10.282 8.692 10.298 8.936 10.314 9.232C10.33 9.52 10.342 9.828 10.35 10.156C10.366 10.476 10.374 10.784 10.374 11.08V16H9.33Z" fill="var(--color-text)"></path></g></svg><span>svelte-<wbr/>entity-<wbr/>store</span></a>
 <ul class="tsd-small-nested-navigation">
-<li><a href="entityStore.html" class="current"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-64"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-function)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6"></rect><path d="M9.39 16V7.24H14.55V8.224H10.446V11.128H14.238V12.112H10.47V16H9.39Z" fill="var(--color-text)"></path></g></svg><span>entity<wbr/>Store</span></a></li></ul></nav></div></div></div>
+<li><a href="entityStore.html" class="current"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-64"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-function)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6"></rect><path d="M9.39 16V7.24H14.55V8.224H10.446V11.128H14.238V12.112H10.47V16H9.39Z" fill="var(--color-text)"></path></g></svg><span>entity<wbr/>Store</span></a></li>
+<li><a href="hydrateFromStore.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>hydrate<wbr/>From<wbr/>Store</span></a></li>
+<li><a href="persistStore.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>persist<wbr/>Store</span></a></li></ul></nav></div></div></div>
 <div class="tsd-generator">
 <p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p></div>
 <div class="overlay"></div></body></html>
